# incident_triaging_n_resolutions

./: .env  .env.example  .gitignore  IMPLEMENTATION.md  README.md  SPECIFICATION.md  TASKS.md  pyproject.toml
.github/workflows/: azure-backend-deploy.yml  azure-frontend-deploy.yml  main_incident-agent-api-dev.yml  main_incident-agent-ui-dev.yml  workflow.yml
.venv311/: pyvenv.cfg
app/: __init__.py  logging_config.py  main.py  run_first_three_errors.py  run_single_error.py  test_anthropic_call.py  test_openai_call.py
app/agents/: classification_service.py
app/api/: app.py
app/classification/: taxonomy.py
app/core/: config.py
app/ingestion/: csv_ingestion.py
app/kb/: __init__.py
app/mcp_client/: __init__.py  client.py
app/mcp_server/: bootstrap.py  kb_retrieval.py  raw_ingestion.py  server.py  verification.py  web_search.py
app/normalization/: __init__.py  error_normalizer.py  taxonomy.py
app/observability/: langsmith.py
app/retrieval/: kb_retriever.py  local_embeddings.py
app/schemas/: __init__.py  error_records.py  processed_errors.py
app/search/: __init__.py  tavily_search.py
app/storage/: processed_error_storage.py  raw_error_storage.py
app/verification/: service.py
app/workflows/: error_processing.py  policy.py  state.py
config/: classification_taxonomy.json  config.json  knowledge_base.json
data/chroma/: chroma.sqlite3
data/processed/: error_prefix_counts.csv-1.json  error_prefix_counts.csv-2.json  error_prefix_counts.csv-3.json  manual_input-manual-1.json
data/raw/: error_prefix_counts.csv-1.json  error_prefix_counts.csv-2.json  error_prefix_counts.csv-3.json  manual_input-manual-1.json
docs/: azure_backend.md  azure_frontend.md  deployment.md  frontend-plan.md  implementation.md  specification.md  storage_strategy.md  tasks.md  technical-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/scripts/: start_frontend.sh
incident_triaging_n_resolutions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: start_backend.sh
tests/: test_agent_trace.py  test_classification_service.py  test_config.py  test_csv_ingestion.py  test_error_endpoint.py  test_error_normalizer.py  test_error_processing_workflow.py  test_health.py  test_kb_retriever.py  test_kb_short_circuit.py  test_mcp_kb_retrieval.py  test_mcp_raw_ingestion.py  test_raw_error_storage.py  test_single_error_runner.py  test_verification_workflow.py  test_workflow_planner.py  test_workflow_policy.py  test_workflow_retry_and_review.py  test_workflow_state.py
(+6 files in other folders)
