[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triaging-n-resolutions"
version = "0.1.0"
description = "Agentic RAG system for error log triage, verification, and knowledge base updates."
readme = "docs/specification.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langchain-chroma>=0.1,<0.2",
  "langgraph>=0.2,<0.3",
  "chromadb>=0.5,<0.6",
  "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
