[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triaging-n-resolutions"
version = "0.1.0"
description = "Agentic RAG system for error log triage, verification, and knowledge base updates."
readme = "docs/specification.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langchain-chroma>=0.1,<0.2",
  "langgraph>=0.2,<0.3",
  "chromadb>=0.5,<0.6",
  "onnxruntime<1.24",
  "sqlalchemy>=2.0,<3.0",
  "tavily-python>=0.5,<0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "black>=24.8,<25.0",
  "isort>=5.13,<6.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = """
(
  ^/.venv/
| ^/.venv311/
| ^/frontend/node_modules/
| ^/frontend/dist/
| ^/data/
| ^/incident_triaging_n_resolutions\\.egg-info/
)
"""

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".venv311", "frontend/node_modules", "frontend/dist", "data", "incident_triaging_n_resolutions.egg-info"]
extend_skip_glob = ["**/__pycache__/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  ".venv311",
  "frontend/node_modules",
  "frontend/dist",
  "data",
  "incident_triaging_n_resolutions.egg-info",
]
